<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/main_buttonNewProduct"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/main_buttonNewProductText" />
    
    <Button
        android:id="@+id/main_buttonProducts"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_buttonProductsText" />
    
    <Button
        android:id="@+id/main_buttonNewDish"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_buttonNewDishText" />
    
    <Button
        android:id="@+id/main_buttonDishes"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
       	android:layout_gravity="center"
        android:text="@string/main_buttonDishesText" />
    
    <Button
        android:id="@+id/main_buttonMenu"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
       	android:layout_gravity="center"
        android:text="@string/main_buttonMenuText" />
    
    

</LinearLayout>
