<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
    	android:id="@+id/menu_searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_searchEditTextHint" />
    
    <ListView
        android:id="@+id/menu_listView"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
        
        <Button
        	android:id="@+id/menu_buttonWeight"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/menu_buttonWeightText" />
        
        <Button
        	android:id="@+id/menu_buttonDelete"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/menu_buttonDeleteText" />
        
        <Button
        	android:id="@+id/menu_buttonConvert"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/menu_buttonConvertText" />
        
        <Button
        	android:id="@+id/menu_buttonBack"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/menu_buttonBackText" />
        
    </LinearLayout>

</LinearLayout>
